test/ui/non_option_not_required.rs
use serde_option::serde_option;

#[serde_option]
struct Foo {
    #[not_required]
    x: u64,
}

fn main() {}
